--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,28 +1,27 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
-
+title = "DaisyKit - AI Toolkit for Ease of Deployment"
+linkTitle = "DaisyKit"
 +++
 
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="DaisyKit - AI Toolkit for Ease of Deployment" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
-		Download <i class="fab fa-github ml-2 "></i>
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/VNOpenAI/daisykit">
+		Source code <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	<p class="lead mt-5">Deploy AI Systems Yourself (DAISY) to desktop computers, mobile, embedded devices and web browsers!</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
-{{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
+{{% blocks/lead color="light" %}}
 
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
-{{% /blocks/lead %}}
+DaisyKit team is developing a high performance SDK for AI with a focus on the easy of deployment on different platforms. The idea is to develop an AI core library in C++ for the best performance, and examples to deploy AI systems easily on mobile (Android, iOS), embedded devices, web browsers and desktop PCs.
+
+<!-- {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
 {{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
@@ -78,4 +77,4 @@ For announcement of latest features etc.
 <h1 class="text-center">This is another Section</h1>
 </div>
 
-{{< /blocks/section >}}
+{{< /blocks/section >}} -->
