--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -19,7 +19,7 @@ linkTitle = "DaisyKit"
 
 {{% blocks/lead color="light" %}}
 
-DaisyKit team is developing a high performance SDK for AI with a focus on the easy of deployment on different platforms. The idea is to develop an AI core library in C++ for the best performance, and examples to deploy AI systems easily on mobile (Android, iOS), embedded devices, web browsers and desktop PCs.
+DaisyKit team is developing a high performance SDK for AI with a focus on the ease of deployment on different platforms. The idea is to develop an AI core library in C++ for the best performance, and examples to deploy AI systems easily on mobile (Android, iOS), embedded devices, web browsers and desktop PCs.
 
 <!-- {{% /blocks/lead %}}
 
