--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -8,7 +8,7 @@ linkTitle = "DaisyKit"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/VNOpenAI/daisykit">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/Daisykit-AI/daisykit">
 		Source code <i class="fab fa-github ml-2 "></i>
 	</a>
 	<p class="lead mt-5">Deploy AI Systems Yourself (DAISY) to desktop computers, mobile, embedded devices and web browsers!</p>
